--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
   <p>I work the graveyard shift at Amazon’s warehouse. Due to my circadian rhythm and overnight schedule, uploading on Saturday was not possible without losing an entire day. This solution honors my professional obligations while meeting academic expectations.</p>
   <h2>Submitted Files</h2>
   <ul>
-    <li>Final_Week7_Assignment_Part_1A.docx – Case Analysis Report</li>
-    <li>Final_Week7_Assignment_Part_1B.docx – Executive Strategy Brief</li>
-    <li>Final_Week7_Assignment_Part_2A.docx – Glows Reflection</li>
-    <li>Final_Week7_Assignment_Part_2B.docx – Grows Reflection</li>
+    <li><a href="1A-Final_Week7_Assignment_Part_1A.pdf" titlle="Click here to download this PDF.">Final_Week7_Assignment_Part_1A.pdf – Case Analysis Report</a></li>
+    <li><a href="1B-Final_Week7_Assignment_Part_1A.pdf" titlle="Click here to download this PDF.">Final_Week7_Assignment_Part_1B.pdf – Executive Strategy Brief</a></li>
+    <li><a href="2A-Final_Week7_Assignment_Part_1A.pdf" titlle="Click here to download this PDF.">Final_Week7_Assignment_Part_2A.pdf – Glows Reflection</a></li>
+    <li><a href="2B-Final_Week7_Assignment_Part_1A.pdf" titlle="Click here to download this PDF.">Final_Week7_Assignment_Part_2B.pdf – Grows Reflection</a></li>
   </ul>
   <footer>
     &copy; 2025 Michael Widener, II. Licensed under Creative Commons Attribution 4.0 International (CC BY 4.0).
